Fix header overlapping clock

--- a/web/src/main.less
+++ b/web/src/main.less
@@ -16,6 +16,7 @@
     display: inline-block;
     padding: 1rem 2rem;
     margin: 0;
+    z-index: 9999991;
 
     cursor: pointer;
 
@@ -365,7 +366,7 @@
     top: 10px;
     right: 20px;
     text-align: center;
-    z-index: 9999999;
+    z-index: 9999990;
 
     @green: #008744;
     @blue: #0057e7;
